--- a/about-me.html
+++ b/about-me.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/593643f9ee.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="about-body">
     <header>
         <nav>
             <ul>
@@ -19,10 +19,10 @@
             </ul>
         </nav>
     </header>
-   <main>
+    <main id="about-me">
        <section id="bio">
            <h2><span id="span-orange">BIO</span></h2>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dignissimos praesentium quam, repudiandae iste porro necessitatibus ab consectetur doloribus obcaecati neque tempora deleniti voluptatibus consequatur impedit soluta, temporibus dolore.</p>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, nobis dolores aliquam sunt nam minima. Quia repudiandae maiores, commodi ad beatae natus aliquam velit repellat. Earum nobis pariatur illo placeat exercitationem in illum distinctio voluptatem, assumenda quibusdam reprehenderit, aliquid porro vitae? Quod tenetur qui in maiores voluptatem ex, repudiandae quos earum sint eligendi nostrum incidunt eaque minus ipsam. Adipisci amet fugiat veniam error aut. Totam iure dignissimos assumenda laborum soluta est cumque minus quibusdam sapiente at. Repellat rem neque optio, aspernatur dolorem doloribus et recusandae nulla quas alias necessitatibus ipsam nemo culpa minima debitis voluptatibus sit ut itaque ab consequuntur?</p>
        </section>
        <section id="jobs">
            <div class="job">
@@ -44,16 +44,18 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia nemo voluptatibus consequuntur amet doloremque animi asperiores sunt nihil inventore! Dolor.</p>
            </div>
        </section>
-   </main>
-   <footer>
-    <div id="social-links">
-        <a href="#"><img src="/img/github.png" alt="github"></a>
-        <a href="#"><img src="/img/gmail.png" alt="gmail"></a>
-        <a href="#"><img src="/img/linkedin.png" alt="linkedin"></a>
-        <a href="#"><img src="/img/twitter.png" alt="twitter"></a>
-    </div>
-    <div id="copyright">
-        <p>&copy; Copyright 2022</p>
+    </main>
+    <footer>
+    <div id="footer">
+        <div id="social-links">
+            <a href="#"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+            <a href="#"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
+        </div>
+        <div id="copyright">
+            <p>&copy; Copyright 2022</p>
+        </div>
     </div>
     </footer>
 </body>
