--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/593643f9ee.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="contact-body">
     <header>
         <nav>
             <ul>
@@ -19,33 +20,35 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="contact-section">
             <h2>Contact Me...</h2>
             <div id="contact-list">
                 <div class="contact">
-                    <i class="fas fa-envelope" aria-hidden="true">Email</i>
+                    <i class="fas fa-envelope" aria-hidden="true"></i><span> Email</span>
                     <p>kerem7095@gmail.com</p>
                 </div>
                 <div class="contact">
-                    <i class="fas fa-mobile-alt" aria-hidden="true">Phone</i>
+                    <i class="fas fa-mobile-alt" aria-hidden="true"></i><span> Phone</span>
                     <p>+1 (222) 333 22 11</p>
                 </div>
                 <div class="contact">
-                    <i class="fas fa-envelope" aria-hidden="true">Address</i>
+                    <i class="fas fa-envelope" aria-hidden="true"></i><span> Addreess</span>
                     <p>64 First St. Mc Kenzie, LA</p>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <div id="social-links">
-            <a href="#"><img src="/img/github.png" alt="github"></a>
-            <a href="#"><img src="/img/gmail.png" alt="gmail"></a>
-            <a href="#"><img src="/img/linkedin.png" alt="linkedin"></a>
-            <a href="#"><img src="/img/twitter.png" alt="twitter"></a>
-        </div>
-        <div id="copyright">
-            <p>&copy; Copyright 2022</p>
+        <div id="footer">
+            <div id="social-links">
+                <a href="#"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
+            </div>
+            <div id="copyright">
+                <p>&copy; Copyright 2022</p>
+            </div>
         </div>
     </footer>
 </body>
