--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/593643f9ee.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="home-body">
     <header>
         <nav>
             <ul>
@@ -19,24 +19,29 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="home">
         <section>
-            <h2>Hi My Name is</h2>
-            <h1>Jeremi <span id="span-name">Eddard</span></h1>
-            <hr>
-            <h2>Front End Developer, Team Mentor</h2>
+            <div id="home-p">
+                <h2 class="heading-small">Hi My Name is</h2>
+                <h1 class="heading-big">Jeremi <span id="span-name">Eddard</span></h1>
+            </div>
+            <div>
+                <h2 class="heading-small">Front End Developer</h2>
+            </div>
+            
         </section>
     </main>
     <footer>
-        <div id="social-links">
-            <a href="#"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
-            <a href="#"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
-            <a href="#"><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
-            <a href="#"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
-
-        </div>
-        <div id="copyright">
-            <p>&copy; Copyright 2022</p>
+        <div id="footer">
+            <div id="social-links">
+                <a href="#"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
+            </div>
+            <div id="copyright">
+                <p>&copy; Copyright 2022</p>
+            </div>
         </div>
     </footer>
 </body>
