--- a/my-projects.html
+++ b/my-projects.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/593643f9ee.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="my-projects-body">
     <header>
         <nav>
             <ul>
@@ -19,88 +19,94 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="my-projects">
         <section>
             <h1>MY PROJECTS</h1>
         </section>
         <section>
-            <div class="project">
-                <img src="" alt="">
-                <div class="project-btns">
-                    <a href=""><i class="fas fa-eye" aria-hidden="true"></i>
-                    Preview
-                    </a>
-                    <a href=""><i class="fab fa-github" aria-hidden="true"></i>
-                    Github
-                    </a>
+            <div id="projects">
+                <div class="project">
+                    <img class="image" src="img/project-1.jpg" alt="">
+                    <div class="middle">
+                        <a class="text1" href="#"><i class="fas fa-eye" aria-hidden="true"></i>
+                        Preview
+                        </a>
+                        <a class="text2" href="#"><i class="fab fa-github" aria-hidden="true"></i>
+                        Github
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <img src="" alt="">
-                <div class="project-btns">
-                    <a href=""><i class="fas fa-eye" aria-hidden="true"></i>
-                    Preview
-                    </a>
-                    <a href=""><i class="fab fa-github" aria-hidden="true"></i>
-                    Github
-                    </a>
+                <div class="project">
+                    <img class="image" src="img/project-2.jpg" alt="">
+                    <div class="middle">
+                        <a class="text1" href="#"><i class="fas fa-eye" aria-hidden="true"></i>
+                        Preview
+                        </a>
+                        <a class="text2" href="#"><i class="fab fa-github" aria-hidden="true"></i>
+                        Github
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <img src="" alt="">
-                <div class="project-btns">
-                    <a href=""><i class="fas fa-eye" aria-hidden="true"></i>
-                    Preview
-                    </a>
-                    <a href=""><i class="fab fa-github" aria-hidden="true"></i>
-                    Github
-                    </a>
+                <div class="project">
+                    <img class="image" src="img/project-3.jpg" alt="">
+                    <div class="middle">
+                        <a class="text1" href="#"><i class="fas fa-eye" aria-hidden="true"></i>
+                        Preview
+                        </a>
+                        <a class="text2" href="#"><i class="fab fa-github" aria-hidden="true"></i>
+                        Github
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <img src="" alt="">
-                <div class="project-btns">
-                    <a href=""><i class="fas fa-eye" aria-hidden="true"></i>
-                    Preview
-                    </a>
-                    <a href=""><i class="fab fa-github" aria-hidden="true"></i>
-                    Github
-                    </a>
+                <div class="project">
+                    <img class="image" src="img/project-4.jpg" alt="">
+                    <div class="middle">
+                        <a class="text1" href="#"><i class="fas fa-eye" aria-hidden="true"></i>
+                        Preview
+                        </a>
+                        <a class="text2" href="#"><i class="fab fa-github" aria-hidden="true"></i>
+                        Github
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <img src="" alt="">
-                <div class="project-btns">
-                    <a href=""><i class="fas fa-eye" aria-hidden="true"></i>
-                    Preview
-                    </a>
-                    <a href=""><i class="fab fa-github" aria-hidden="true"></i>
-                    Github
-                    </a>
+                <div class="project">
+                    <img class="image" src="img/project-5.jpg" alt="">
+                    <div class="middle">
+                        <a class="text1" href="#"><i class="fas fa-eye" aria-hidden="true"></i>
+                        Preview
+                        </a>
+                        <a class="text2" href="#"><i class="fab fa-github" aria-hidden="true"></i>
+                        Github
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <img src="" alt="">
-                <div class="project-btns">
-                    <a href=""><i class="fas fa-eye" aria-hidden="true"></i>
-                    Preview
-                    </a>
-                    <a href=""><i class="fab fa-github" aria-hidden="true"></i>
-                    Github
-                    </a>
+                <div class="project">
+                    <img class="image" src="img/project-6.jpg" alt="">
+                    <div class="middle">
+                        <a class="text1" href="#">
+                            <i class="fas fa-eye" aria-hidden="true"></i>
+                            Preview
+                        </a>
+                        <a class="text2" href="#">
+                            <i class="fab fa-github" aria-hidden="true"></i>
+                            Github
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <div id="social-links">
-            <a href="#"><img src="/img/github.png" alt="github"></a>
-            <a href="#"><img src="/img/gmail.png" alt="gmail"></a>
-            <a href="#"><img src="/img/linkedin.png" alt="linkedin"></a>
-            <a href="#"><img src="/img/twitter.png" alt="twitter"></a>
-        </div>
-        <div id="copyright">
-            <p>&copy; Copyright 2022</p>
+        <div id="footer">
+            <div id="social-links">
+                <a href="#"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                <a href="#"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
+            </div>
+            <div id="copyright">
+                <p>&copy; Copyright 2022</p>
+            </div>
         </div>
     </footer>
 </body>
